# note_ledger

./: Cargo.toml  README.md  dfx.json  package.json
src/note_ledger_backend/: Cargo.toml  note_ledger_backend.did
src/note_ledger_backend/src/: lib.rs
src/note_ledger_frontend/: package.json
src/note_ledger_frontend/src/: App.js
