[package]
name = "note_ledger_backend"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "note_ledger"  
path = "src/lib.rs"  
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
image = "0.23"
tesseract = "0.6.1"

